--- a/Book01/Book1.tex
+++ b/Book01/Book1.tex
@@ -4,10 +4,10 @@
 \pdfbookmark[0]{Book 1}{book1}
 \pagestyle{plain}
 \begin{center}
-{\Huge ELEMENTS BOOK 1}\\
+{\Huge ELEMENTOS LIBRO 1}\\
 \spa\spa\spa
-{\huge\it Fundamentals of Plane Geometry Involving}\\[0.5ex] {\huge\it 
-Straight-Lines}
+{\huge\it Fundamentos de Geometría Plana que Implican }\\[0.5ex] {\huge\it 
+Líneas Rectas}
 \end{center}\newpage
 
 %%%%%%%
@@ -17,7 +17,7 @@ Straight-Lines}
 \pagestyle{fancy}
 \cfoot{\gr{\thepage}}
 \lhead{\large\gr{STOIQEIWN \gn{1}.}}
-\rhead{\large ELEMENTS BOOK 1}
+\rhead{\large ELEMENTOS LIBRO 1}
 \begin{Parallel}{}{} 
 \ParallelLText{
 \begin{center}
@@ -100,11 +100,11 @@ o>~usai ka`i >ekball'omenai e>ic >'apeiron >ef> <ek'atera t`a m'erh
 {\large Definitions}
 \end{center}
 
-1.~A point is that of which there is no part.
+1.~Un punto es lo que no tiene partes.
 
-2.~And a line is a length without breadth.
+2.~Y una línea es una longitud sin anchura.
 
-3.~And the extremities of a line are points.
+3.~Y los extremos de una línea son puntos.
 
 4.~A straight-line is (any) one which lies  evenly with points on itself.
 
